// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table Alignment 1`] = `
<div
  data-css-f9xxs9=""
  role="region"
  tabIndex={0}
>
  <table
    data-css-9fiqqd=""
    role="table"
  >
    <thead
      data-css-1ts1rl3=""
    >
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Align Left
        </th>
        <th
          data-css-1qf9mo3=""
        >
          Align Center
        </th>
        <th
          data-css-av945f=""
        >
          Align Right
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Baron
        </th>
        <td
          data-css-rg0vl=""
        >
          Beer
        </td>
        <td
          data-css-486wol=""
        >
          Derrick_Raynor@yahoo.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Ignacio
        </th>
        <td
          data-css-rg0vl=""
        >
          Swift
        </td>
        <td
          data-css-486wol=""
        >
          Hans.Marquardt@yahoo.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Edwina
        </th>
        <td
          data-css-rg0vl=""
        >
          Predovic
        </td>
        <td
          data-css-486wol=""
        >
          Damaris_Wilderman@hotmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Devante
        </th>
        <td
          data-css-rg0vl=""
        >
          Schuppe
        </td>
        <td
          data-css-486wol=""
        >
          Kris_Parker@hotmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Skylar
        </th>
        <td
          data-css-rg0vl=""
        >
          Greenholt
        </td>
        <td
          data-css-486wol=""
        >
          Gust.Hodkiewicz@hotmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Basic 1`] = `
<div
  data-css-f9xxs9=""
  role="region"
  tabIndex={0}
>
  <table
    data-css-9fiqqd=""
    role="table"
  >
    <thead
      data-css-1ts1rl3=""
    >
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          First name
        </th>
        <th
          data-css-1c7qoga=""
        >
          Last name
        </th>
        <th
          data-css-1c7qoga=""
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Adolphus
        </th>
        <td
          data-css-nyp2vl=""
        >
          Donnelly
        </td>
        <td
          data-css-nyp2vl=""
        >
          Braulio_Rempel33@hotmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Krystal
        </th>
        <td
          data-css-nyp2vl=""
        >
          MacGyver
        </td>
        <td
          data-css-nyp2vl=""
        >
          Kacey7@yahoo.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Aglae
        </th>
        <td
          data-css-nyp2vl=""
        >
          Greenholt
        </td>
        <td
          data-css-nyp2vl=""
        >
          Vivianne.Johnson79@hotmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Vladimir
        </th>
        <td
          data-css-nyp2vl=""
        >
          White
        </td>
        <td
          data-css-nyp2vl=""
        >
          Beaulah_Douglas@yahoo.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Hillard
        </th>
        <td
          data-css-nyp2vl=""
        >
          Bauch
        </td>
        <td
          data-css-nyp2vl=""
        >
          Michelle_OConnell58@hotmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Mixed Content 1`] = `
<div
  data-css-f9xxs9=""
  role="region"
  tabIndex={0}
>
  <table
    data-css-9fiqqd=""
    role="table"
  >
    <thead
      data-css-1ts1rl3=""
    >
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          First name
        </th>
        <th
          data-css-1c7qoga=""
        >
          Last name
        </th>
        <th
          data-css-1c7qoga=""
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div
              data-css-79vgce=""
            >
              <div
                aria-label="Darien"
                data-css-1h1qs66=""
                style={
                  Object {
                    "backgroundColor": "#009380",
                  }
                }
              >
                D
              </div>
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                  "width": "12px",
                }
              }
            />
            <span>
              Darien
            </span>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
        >
          Romaguera
        </td>
        <td
          data-css-nyp2vl=""
        >
          Kathryn91@gmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div
              data-css-79vgce=""
            >
              <div
                aria-label="Libby"
                data-css-1h1qs66=""
                style={
                  Object {
                    "backgroundColor": "#0074AB",
                  }
                }
              >
                L
              </div>
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                  "width": "12px",
                }
              }
            />
            <span>
              Libby
            </span>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
        >
          Treutel
        </td>
        <td
          data-css-nyp2vl=""
        >
          Rogelio.Kuhic@hotmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div
              data-css-79vgce=""
            >
              <div
                aria-label="Myrna"
                data-css-1h1qs66=""
                style={
                  Object {
                    "backgroundColor": "#008F46",
                  }
                }
              >
                M
              </div>
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                  "width": "12px",
                }
              }
            />
            <span>
              Myrna
            </span>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
        >
          Bernier
        </td>
        <td
          data-css-nyp2vl=""
        >
          Bridget23@yahoo.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div
              data-css-79vgce=""
            >
              <div
                aria-label="Darrell"
                data-css-1h1qs66=""
                style={
                  Object {
                    "backgroundColor": "#B28300",
                  }
                }
              >
                D
              </div>
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                  "width": "12px",
                }
              }
            />
            <span>
              Darrell
            </span>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
        >
          Stamm
        </td>
        <td
          data-css-nyp2vl=""
        >
          Bruce_Bartell@gmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div
              data-css-79vgce=""
            >
              <div
                aria-label="Damon"
                data-css-1h1qs66=""
                style={
                  Object {
                    "backgroundColor": "#B28300",
                  }
                }
              >
                D
              </div>
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                  "width": "12px",
                }
              }
            />
            <span>
              Damon
            </span>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
        >
          Goyette
        </td>
        <td
          data-css-nyp2vl=""
        >
          Luisa.Nader53@yahoo.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Row Selection 1`] = `
<div
  data-css-f9xxs9=""
  role="region"
  tabIndex={0}
>
  <table
    data-css-9fiqqd=""
    role="table"
  >
    <thead
      data-css-1ts1rl3=""
    >
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1cfeqew=""
              >
                <svg
                  aria-label="Indeterminate Mark"
                  data-css-ey6g07=""
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="2"
                    width="10"
                    x="3"
                    y="7"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </th>
        <th
          data-css-1c7qoga=""
        >
          First name
        </th>
        <th
          data-css-1c7qoga=""
        >
          Last name
        </th>
        <th
          data-css-1c7qoga=""
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-1195cc4=""
      >
        <td
          data-css-nyp2vl=""
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
        >
          Era
        </td>
        <td
          data-css-nyp2vl=""
        >
          Dooley
        </td>
        <td
          data-css-nyp2vl=""
        >
          Schuyler_MacGyver50@hotmail.com
        </td>
      </tr>
      <tr
        data-css-10jq9h3=""
      >
        <td
          data-css-nyp2vl=""
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={true}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1cfeqew=""
              >
                <svg
                  aria-label="Checkmark"
                  data-css-ey6g07=""
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
        >
          Delmer
        </td>
        <td
          data-css-nyp2vl=""
        >
          Schaefer
        </td>
        <td
          data-css-nyp2vl=""
        >
          Mathilde2@hotmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <td
          data-css-nyp2vl=""
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
        >
          Liliane
        </td>
        <td
          data-css-nyp2vl=""
        >
          Heaney
        </td>
        <td
          data-css-nyp2vl=""
        >
          Fabian_Reichel@gmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <td
          data-css-nyp2vl=""
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
        >
          Noemy
        </td>
        <td
          data-css-nyp2vl=""
        >
          Baumbach
        </td>
        <td
          data-css-nyp2vl=""
        >
          Jerrell.Hackett@hotmail.com
        </td>
      </tr>
      <tr
        data-css-10jq9h3=""
      >
        <td
          data-css-nyp2vl=""
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={true}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1cfeqew=""
              >
                <svg
                  aria-label="Checkmark"
                  data-css-ey6g07=""
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
        >
          Alexandrea
        </td>
        <td
          data-css-nyp2vl=""
        >
          Haley
        </td>
        <td
          data-css-nyp2vl=""
        >
          Wilson.Jakubowski@gmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <td
          data-css-nyp2vl=""
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
        >
          Constance
        </td>
        <td
          data-css-nyp2vl=""
        >
          Kutch
        </td>
        <td
          data-css-nyp2vl=""
        >
          Coy87@hotmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <td
          data-css-nyp2vl=""
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
        >
          Delphine
        </td>
        <td
          data-css-nyp2vl=""
        >
          Huel
        </td>
        <td
          data-css-nyp2vl=""
        >
          Forest_Lind@yahoo.com
        </td>
      </tr>
      <tr
        data-css-10jq9h3=""
      >
        <td
          data-css-nyp2vl=""
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={true}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1cfeqew=""
              >
                <svg
                  aria-label="Checkmark"
                  data-css-ey6g07=""
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
        >
          Brittany
        </td>
        <td
          data-css-nyp2vl=""
        >
          Hirthe
        </td>
        <td
          data-css-nyp2vl=""
        >
          Efrain_Gerhold71@gmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <td
          data-css-nyp2vl=""
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
        >
          Geovany
        </td>
        <td
          data-css-nyp2vl=""
        >
          Franecki
        </td>
        <td
          data-css-nyp2vl=""
        >
          Nathanael.Wolff9@hotmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <td
          data-css-nyp2vl=""
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
        >
          Ena
        </td>
        <td
          data-css-nyp2vl=""
        >
          Boyle
        </td>
        <td
          data-css-nyp2vl=""
        >
          Luna.Christiansen@gmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Sorting 1`] = `
<div
  data-css-f9xxs9=""
  role="region"
  tabIndex={0}
>
  <table
    data-css-9fiqqd=""
    role="table"
  >
    <thead
      data-css-1ts1rl3=""
    >
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-m2a81v=""
        >
          First name
          <div
            data-css-7dab2f=""
            data-css-yaqq33=""
          >
            <svg
              aria-label="sort desc icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.646 5.354L7.354 9.646a.5.5 0 000 .707l.703.704a.5.5 0 00.707 0L11 8.827V17.5a.5.5 0 00.5.5h1a.5.5 0 00.5-.5V8.827l2.236 2.23a.5.5 0 00.707 0l.704-.704a.5.5 0 000-.707l-4.293-4.292a.5.5 0 00-.707 0z"
              />
            </svg>
          </div>
        </th>
        <th
          data-css-m2a81v=""
        >
          Last name
          <div
            data-css-7dab2f=""
            data-css-yaqq33=""
          >
            <svg
              aria-label="sort desc icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 15.173l-2.236-2.23a.5.5 0 00-.707 0l-.703.703a.5.5 0 000 .708l4.292 4.292a.5.5 0 00.707 0l4.293-4.292a.5.5 0 000-.708l-.703-.703a.5.5 0 00-.707 0L13 15.173V6.5a.5.5 0 00-.5-.5h-1a.5.5 0 00-.5.5v8.673z"
              />
            </svg>
          </div>
        </th>
        <th
          data-css-m2a81v=""
        >
          Email
          <div
            data-css-7dab2f=""
            data-css-yaqq33=""
          >
            <svg
              aria-label="sort icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
              />
            </svg>
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Jorge
        </th>
        <td
          data-css-nyp2vl=""
        >
          O'Connell
        </td>
        <td
          data-css-nyp2vl=""
        >
          Silas.Will@gmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Enrico
        </th>
        <td
          data-css-nyp2vl=""
        >
          VonRueden
        </td>
        <td
          data-css-nyp2vl=""
        >
          Helen_Schmeler@yahoo.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Brittany
        </th>
        <td
          data-css-nyp2vl=""
        >
          Leuschke
        </td>
        <td
          data-css-nyp2vl=""
        >
          Yasmeen49@hotmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Eva
        </th>
        <td
          data-css-nyp2vl=""
        >
          Jacobs
        </td>
        <td
          data-css-nyp2vl=""
        >
          Birdie0@hotmail.com
        </td>
      </tr>
      <tr
        data-css-1195cc4=""
      >
        <th
          data-css-1c7qoga=""
        >
          Erich
        </th>
        <td
          data-css-nyp2vl=""
        >
          Dach
        </td>
        <td
          data-css-nyp2vl=""
        >
          Hubert_Welch@yahoo.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table/layouts Horizontal Scroll 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
      "outline": "2px dashed pink",
      "padding": 20,
      "width": 500,
    }
  }
>
  <div
    data-css-f9xxs9=""
    role="region"
    tabIndex={0}
  >
    <table
      data-css-9fiqqd=""
      role="table"
    >
      <thead
        data-css-1ts1rl3=""
      >
        <tr
          data-css-1195cc4=""
        >
          <td
            data-css-nyp2vl=""
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </td>
          <th
            data-css-1c7qoga=""
          >
            Full Name
          </th>
          <th
            data-css-1c7qoga=""
          >
            First name
          </th>
          <th
            data-css-1c7qoga=""
          >
            Last name
          </th>
          <th
            data-css-1c7qoga=""
          >
            Email
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-css-1195cc4=""
        >
          <td
            data-css-nyp2vl=""
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </td>
          <th
            data-css-1c7qoga=""
          >
            Emil
             
            Willms
          </th>
          <td
            data-css-nyp2vl=""
          >
            Emil
          </td>
          <td
            data-css-nyp2vl=""
          >
            Willms
          </td>
          <td
            data-css-nyp2vl=""
          >
            Lura_Pouros95@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <td
            data-css-nyp2vl=""
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </td>
          <th
            data-css-1c7qoga=""
          >
            Monique
             
            Reilly
          </th>
          <td
            data-css-nyp2vl=""
          >
            Monique
          </td>
          <td
            data-css-nyp2vl=""
          >
            Reilly
          </td>
          <td
            data-css-nyp2vl=""
          >
            Rhoda_Botsford43@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <td
            data-css-nyp2vl=""
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </td>
          <th
            data-css-1c7qoga=""
          >
            Araceli
             
            Huels
          </th>
          <td
            data-css-nyp2vl=""
          >
            Araceli
          </td>
          <td
            data-css-nyp2vl=""
          >
            Huels
          </td>
          <td
            data-css-nyp2vl=""
          >
            Hailey33@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <td
            data-css-nyp2vl=""
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </td>
          <th
            data-css-1c7qoga=""
          >
            Nathan
             
            Becker
          </th>
          <td
            data-css-nyp2vl=""
          >
            Nathan
          </td>
          <td
            data-css-nyp2vl=""
          >
            Becker
          </td>
          <td
            data-css-nyp2vl=""
          >
            Thad33@yahoo.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <td
            data-css-nyp2vl=""
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </td>
          <th
            data-css-1c7qoga=""
          >
            Maximillian
             
            McKenzie
          </th>
          <td
            data-css-nyp2vl=""
          >
            Maximillian
          </td>
          <td
            data-css-nyp2vl=""
          >
            McKenzie
          </td>
          <td
            data-css-nyp2vl=""
          >
            Julius87@hotmail.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Components/Table/layouts Sticky Column And Row Headers 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": 500,
      "justifyContent": "center",
      "outline": "2px dashed pink",
      "padding": 20,
      "width": 500,
    }
  }
>
  <div
    data-css-f9xxs9=""
    role="region"
    tabIndex={0}
  >
    <table
      data-css-9fiqqd=""
      role="table"
    >
      <thead
        data-css-1ts1rl3=""
      >
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="col"
            style={
              Object {
                "width": 1,
              }
            }
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-17w5r9f=""
            scope="col"
          >
            Full Name
          </th>
          <th
            data-css-17w5r9f=""
            scope="col"
          >
            First name
          </th>
          <th
            data-css-17w5r9f=""
            scope="col"
          >
            Last name
          </th>
          <th
            data-css-17w5r9f=""
            scope="col"
          >
            Email
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Troy
             
            Grady
          </th>
          <td
            data-css-nyp2vl=""
          >
            Troy
          </td>
          <td
            data-css-nyp2vl=""
          >
            Grady
          </td>
          <td
            data-css-nyp2vl=""
          >
            Aliza.Heller@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Nona
             
            Bergstrom
          </th>
          <td
            data-css-nyp2vl=""
          >
            Nona
          </td>
          <td
            data-css-nyp2vl=""
          >
            Bergstrom
          </td>
          <td
            data-css-nyp2vl=""
          >
            Adelbert50@yahoo.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Brown
             
            Schuster
          </th>
          <td
            data-css-nyp2vl=""
          >
            Brown
          </td>
          <td
            data-css-nyp2vl=""
          >
            Schuster
          </td>
          <td
            data-css-nyp2vl=""
          >
            Caterina18@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Neal
             
            Rath
          </th>
          <td
            data-css-nyp2vl=""
          >
            Neal
          </td>
          <td
            data-css-nyp2vl=""
          >
            Rath
          </td>
          <td
            data-css-nyp2vl=""
          >
            Name_Marquardt58@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Electa
             
            Schoen
          </th>
          <td
            data-css-nyp2vl=""
          >
            Electa
          </td>
          <td
            data-css-nyp2vl=""
          >
            Schoen
          </td>
          <td
            data-css-nyp2vl=""
          >
            Vincenza.Gleason78@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Forrest
             
            Farrell
          </th>
          <td
            data-css-nyp2vl=""
          >
            Forrest
          </td>
          <td
            data-css-nyp2vl=""
          >
            Farrell
          </td>
          <td
            data-css-nyp2vl=""
          >
            Cortez56@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Robert
             
            Connelly
          </th>
          <td
            data-css-nyp2vl=""
          >
            Robert
          </td>
          <td
            data-css-nyp2vl=""
          >
            Connelly
          </td>
          <td
            data-css-nyp2vl=""
          >
            Rafaela_Grimes@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Benedict
             
            Dibbert
          </th>
          <td
            data-css-nyp2vl=""
          >
            Benedict
          </td>
          <td
            data-css-nyp2vl=""
          >
            Dibbert
          </td>
          <td
            data-css-nyp2vl=""
          >
            Elton73@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Kristopher
             
            Hayes
          </th>
          <td
            data-css-nyp2vl=""
          >
            Kristopher
          </td>
          <td
            data-css-nyp2vl=""
          >
            Hayes
          </td>
          <td
            data-css-nyp2vl=""
          >
            Gloria_Moen@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Camden
             
            Kutch
          </th>
          <td
            data-css-nyp2vl=""
          >
            Camden
          </td>
          <td
            data-css-nyp2vl=""
          >
            Kutch
          </td>
          <td
            data-css-nyp2vl=""
          >
            Eleanora_Wolff47@yahoo.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Abdul
             
            Rowe
          </th>
          <td
            data-css-nyp2vl=""
          >
            Abdul
          </td>
          <td
            data-css-nyp2vl=""
          >
            Rowe
          </td>
          <td
            data-css-nyp2vl=""
          >
            Mae.Tremblay32@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Dagmar
             
            VonRueden
          </th>
          <td
            data-css-nyp2vl=""
          >
            Dagmar
          </td>
          <td
            data-css-nyp2vl=""
          >
            VonRueden
          </td>
          <td
            data-css-nyp2vl=""
          >
            Virginie_Wunsch@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Maryse
             
            Moen
          </th>
          <td
            data-css-nyp2vl=""
          >
            Maryse
          </td>
          <td
            data-css-nyp2vl=""
          >
            Moen
          </td>
          <td
            data-css-nyp2vl=""
          >
            Jodie.Nitzsche@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Deonte
             
            Heaney
          </th>
          <td
            data-css-nyp2vl=""
          >
            Deonte
          </td>
          <td
            data-css-nyp2vl=""
          >
            Heaney
          </td>
          <td
            data-css-nyp2vl=""
          >
            Adolf_Klein25@yahoo.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Arvilla
             
            Quigley
          </th>
          <td
            data-css-nyp2vl=""
          >
            Arvilla
          </td>
          <td
            data-css-nyp2vl=""
          >
            Quigley
          </td>
          <td
            data-css-nyp2vl=""
          >
            Alexandre87@yahoo.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Eldon
             
            Pouros
          </th>
          <td
            data-css-nyp2vl=""
          >
            Eldon
          </td>
          <td
            data-css-nyp2vl=""
          >
            Pouros
          </td>
          <td
            data-css-nyp2vl=""
          >
            Danielle76@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Clair
             
            Thompson
          </th>
          <td
            data-css-nyp2vl=""
          >
            Clair
          </td>
          <td
            data-css-nyp2vl=""
          >
            Thompson
          </td>
          <td
            data-css-nyp2vl=""
          >
            Josue29@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Ardith
             
            Schoen
          </th>
          <td
            data-css-nyp2vl=""
          >
            Ardith
          </td>
          <td
            data-css-nyp2vl=""
          >
            Schoen
          </td>
          <td
            data-css-nyp2vl=""
          >
            Ahmad_Cremin94@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Lorine
             
            Hayes
          </th>
          <td
            data-css-nyp2vl=""
          >
            Lorine
          </td>
          <td
            data-css-nyp2vl=""
          >
            Hayes
          </td>
          <td
            data-css-nyp2vl=""
          >
            Ole.Daugherty@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Josue
             
            Effertz
          </th>
          <td
            data-css-nyp2vl=""
          >
            Josue
          </td>
          <td
            data-css-nyp2vl=""
          >
            Effertz
          </td>
          <td
            data-css-nyp2vl=""
          >
            Margot28@gmail.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Components/Table/layouts Sticky Column Header 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": 500,
      "justifyContent": "center",
      "outline": "2px dashed pink",
      "padding": 20,
    }
  }
>
  <div
    data-css-f9xxs9=""
    role="region"
    tabIndex={0}
  >
    <table
      data-css-9fiqqd=""
      role="table"
    >
      <thead
        data-css-1ts1rl3=""
      >
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="col"
          >
            Full Name
          </th>
          <th
            data-css-17w5r9f=""
            scope="col"
          >
            First name
          </th>
          <th
            data-css-17w5r9f=""
            scope="col"
          >
            Last name
          </th>
          <th
            data-css-17w5r9f=""
            scope="col"
          >
            Email
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Brad
             
            Lang
          </th>
          <td
            data-css-nyp2vl=""
          >
            Brad
          </td>
          <td
            data-css-nyp2vl=""
          >
            Lang
          </td>
          <td
            data-css-nyp2vl=""
          >
            Flavio.Morar82@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Frederick
             
            Lindgren
          </th>
          <td
            data-css-nyp2vl=""
          >
            Frederick
          </td>
          <td
            data-css-nyp2vl=""
          >
            Lindgren
          </td>
          <td
            data-css-nyp2vl=""
          >
            Jaycee_Rice@yahoo.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Gerard
             
            Frami
          </th>
          <td
            data-css-nyp2vl=""
          >
            Gerard
          </td>
          <td
            data-css-nyp2vl=""
          >
            Frami
          </td>
          <td
            data-css-nyp2vl=""
          >
            Cicero_Hartmann90@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Virgie
             
            Satterfield
          </th>
          <td
            data-css-nyp2vl=""
          >
            Virgie
          </td>
          <td
            data-css-nyp2vl=""
          >
            Satterfield
          </td>
          <td
            data-css-nyp2vl=""
          >
            Ron54@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Eino
             
            Homenick
          </th>
          <td
            data-css-nyp2vl=""
          >
            Eino
          </td>
          <td
            data-css-nyp2vl=""
          >
            Homenick
          </td>
          <td
            data-css-nyp2vl=""
          >
            Delta_Yost13@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Luella
             
            Kirlin
          </th>
          <td
            data-css-nyp2vl=""
          >
            Luella
          </td>
          <td
            data-css-nyp2vl=""
          >
            Kirlin
          </td>
          <td
            data-css-nyp2vl=""
          >
            Addison_Bins@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Otilia
             
            Collins
          </th>
          <td
            data-css-nyp2vl=""
          >
            Otilia
          </td>
          <td
            data-css-nyp2vl=""
          >
            Collins
          </td>
          <td
            data-css-nyp2vl=""
          >
            Seamus.Hettinger46@yahoo.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Baby
             
            Mayert
          </th>
          <td
            data-css-nyp2vl=""
          >
            Baby
          </td>
          <td
            data-css-nyp2vl=""
          >
            Mayert
          </td>
          <td
            data-css-nyp2vl=""
          >
            Karianne24@yahoo.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Aisha
             
            VonRueden
          </th>
          <td
            data-css-nyp2vl=""
          >
            Aisha
          </td>
          <td
            data-css-nyp2vl=""
          >
            VonRueden
          </td>
          <td
            data-css-nyp2vl=""
          >
            Mitchel.Parker@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Lynn
             
            Runolfsdottir
          </th>
          <td
            data-css-nyp2vl=""
          >
            Lynn
          </td>
          <td
            data-css-nyp2vl=""
          >
            Runolfsdottir
          </td>
          <td
            data-css-nyp2vl=""
          >
            Vivienne.Jenkins@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Viva
             
            Sipes
          </th>
          <td
            data-css-nyp2vl=""
          >
            Viva
          </td>
          <td
            data-css-nyp2vl=""
          >
            Sipes
          </td>
          <td
            data-css-nyp2vl=""
          >
            Haven2@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Hollis
             
            Johns
          </th>
          <td
            data-css-nyp2vl=""
          >
            Hollis
          </td>
          <td
            data-css-nyp2vl=""
          >
            Johns
          </td>
          <td
            data-css-nyp2vl=""
          >
            Serena_Hamill@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Tianna
             
            Gislason
          </th>
          <td
            data-css-nyp2vl=""
          >
            Tianna
          </td>
          <td
            data-css-nyp2vl=""
          >
            Gislason
          </td>
          <td
            data-css-nyp2vl=""
          >
            Leone.Turcotte67@yahoo.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Elza
             
            Hegmann
          </th>
          <td
            data-css-nyp2vl=""
          >
            Elza
          </td>
          <td
            data-css-nyp2vl=""
          >
            Hegmann
          </td>
          <td
            data-css-nyp2vl=""
          >
            Leila_Nolan94@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Virgie
             
            Fay
          </th>
          <td
            data-css-nyp2vl=""
          >
            Virgie
          </td>
          <td
            data-css-nyp2vl=""
          >
            Fay
          </td>
          <td
            data-css-nyp2vl=""
          >
            Annabell.Stracke71@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Lempi
             
            Emmerich
          </th>
          <td
            data-css-nyp2vl=""
          >
            Lempi
          </td>
          <td
            data-css-nyp2vl=""
          >
            Emmerich
          </td>
          <td
            data-css-nyp2vl=""
          >
            Nicola46@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Annabelle
             
            Stokes
          </th>
          <td
            data-css-nyp2vl=""
          >
            Annabelle
          </td>
          <td
            data-css-nyp2vl=""
          >
            Stokes
          </td>
          <td
            data-css-nyp2vl=""
          >
            Zackery.Lind@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Donna
             
            Morar
          </th>
          <td
            data-css-nyp2vl=""
          >
            Donna
          </td>
          <td
            data-css-nyp2vl=""
          >
            Morar
          </td>
          <td
            data-css-nyp2vl=""
          >
            Quinton.Rippin@yahoo.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Kiana
             
            Grimes
          </th>
          <td
            data-css-nyp2vl=""
          >
            Kiana
          </td>
          <td
            data-css-nyp2vl=""
          >
            Grimes
          </td>
          <td
            data-css-nyp2vl=""
          >
            Wilhelm_Batz@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-1c7qoga=""
          >
            Kaelyn
             
            Corwin
          </th>
          <td
            data-css-nyp2vl=""
          >
            Kaelyn
          </td>
          <td
            data-css-nyp2vl=""
          >
            Corwin
          </td>
          <td
            data-css-nyp2vl=""
          >
            Kiley_Sipes17@gmail.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Components/Table/layouts Sticky Row Header 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
      "outline": "2px dashed pink",
      "padding": 20,
      "width": 500,
    }
  }
>
  <div
    data-css-f9xxs9=""
    role="region"
    tabIndex={0}
  >
    <table
      data-css-9fiqqd=""
      role="table"
    >
      <thead
        data-css-1ts1rl3=""
      >
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
            style={
              Object {
                "width": 1,
              }
            }
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Full Name
          </th>
          <th
            data-css-1c7qoga=""
          >
            First name
          </th>
          <th
            data-css-1c7qoga=""
          >
            Last name
          </th>
          <th
            data-css-1c7qoga=""
          >
            Email
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Jadon
             
            Koch
          </th>
          <td
            data-css-nyp2vl=""
          >
            Jadon
          </td>
          <td
            data-css-nyp2vl=""
          >
            Koch
          </td>
          <td
            data-css-nyp2vl=""
          >
            Ned73@gmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Eric
             
            Gerlach
          </th>
          <td
            data-css-nyp2vl=""
          >
            Eric
          </td>
          <td
            data-css-nyp2vl=""
          >
            Gerlach
          </td>
          <td
            data-css-nyp2vl=""
          >
            Earnest_Wiza@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Amber
             
            DuBuque
          </th>
          <td
            data-css-nyp2vl=""
          >
            Amber
          </td>
          <td
            data-css-nyp2vl=""
          >
            DuBuque
          </td>
          <td
            data-css-nyp2vl=""
          >
            Adam.Aufderhar@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Merritt
             
            Kohler
          </th>
          <td
            data-css-nyp2vl=""
          >
            Merritt
          </td>
          <td
            data-css-nyp2vl=""
          >
            Kohler
          </td>
          <td
            data-css-nyp2vl=""
          >
            Junius.Torphy@hotmail.com
          </td>
        </tr>
        <tr
          data-css-1195cc4=""
        >
          <th
            data-css-17w5r9f=""
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
          >
            Estrella
             
            Green
          </th>
          <td
            data-css-nyp2vl=""
          >
            Estrella
          </td>
          <td
            data-css-nyp2vl=""
          >
            Green
          </td>
          <td
            data-css-nyp2vl=""
          >
            Gerhard_Spencer@yahoo.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
